# pmetrics

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  cloudbuild.yaml  curltest.sh  docker-compose.yaml  pmetrics.md  readme.md  release.sh  start-db.sh
.github/workflows/: rust-ci.yml
clients/python3/: node-agent.py  pmetrics.py  readme.md  webserver.py
conveyance/: convey.sh  endpoints  readme.md
pmetrics/: Chart.yaml  deploy.sh  values.yaml
pmetrics-cli/: makefile  pmetrics-common.cpp  pmetrics-common.h  pmetrics-logger.cpp  pmetrics-measure.cpp  readme.md  testout.sh
pmetrics-web/: .gitignore  Cargo.toml  README.md  test-json.sh
pmetrics-web/src/: audit.rs  main.rs
pmetrics/templates/: hpa.yaml  system.yaml
schema/: monitoring.log.ddl
scripts/: emit-measure.sh
src/: audit.rs  db.rs  lib.rs  main.rs
