[package]
name = "pmetrics"
version = "0.1.0"
authors = ["Paul Nathan <paul@nathan.house>"]

[features]

[profile.release]
debug=true

[dependencies]
pretty_trace = {git = "https://github.com/10XGenomics/rust-toolbox.git"}
nix = "0.27.1"

clap = "4.4.2"
either = "^1"
itertools = "0.11.0"
nickel = "^0.11"

serde = { version = "^1.0", features = ["derive"] }
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
time = "0.3.28"
chrono = { version = "^0.4", features = ["serde"] }
serde_json = "^1.0"
