[package]
edition = "2021"
name = "pmetrics"
version = "1.0.2"
authors = ["Paul Nathan <paul@nathan.house>"]

[features]

[profile.release]
debug = true

[dependencies]
# nix = "0.27.1"

clap = { version = "4", features = ["derive"] }
either = "1"
itertools = "0.11.0"
nickel = "0.11"
percent-encoding-rfc3986 = "0.1"
serde = { version = "1.0", features = ["derive"] }
postgres = { version = "0.19.10", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
